[package]
name = "waveshare-fingerprint-lib"
version = "0.1.0"
edition = "2021"
authors = ["Mithilesh mitumithilesh@gmail.com"]
description = "A Rust library for controlling Waveshare fingerprint sensors over serial communication"
license = "MIT"
repository = "https://github.com/kingsmen732/waveshare_fingerprint_lib"
documentation = "https://docs.rs/kingsmen732-waveshare_fingerprint_lib"
readme = "README.md"
keywords = ["fingerprint", "sensor", "serial", "biometrics"]
categories = ["hardware-support", "api-bindings"]
exclude = [
    "src/test.rs",
    "*.jpg",
    "*.png",
    "*.mp4",
    "examples/",
    "assets/",
    "target/",
]
[dependencies]
serialport = "4.2"
